--- a/client/src/components/Account/Account.scss
+++ b/client/src/components/Account/Account.scss
@@ -62,7 +62,7 @@
             padding-left: 0;
             flex-direction: column;
             padding: 5px 10px;
-            top: 162%;
+            top: 136%;
             display: none;
             width: max-content;
             z-index: 1;
@@ -102,7 +102,7 @@
                 height: 30px;
                 right: 0;
                 left: 0;
-                top: -17%;
+                bottom: 100%;
             }
         }
     }
