--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,4 @@
+@use "./colors";
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +15,7 @@ body {
 #root {
     width: 100%;
     height: 100%;
-    background-color: #dddddd;
+    background-color: colors.$background-color;
     overflow: hidden;
 
 }
