--- a/client/src/_colors.scss
+++ b/client/src/_colors.scss
@@ -4,3 +4,5 @@ $color-fullLayout: #dddddd;
 $coler-btn: #d41138;
 $coler-hover: rgb(193, 193, 193);
 $shadow: rgb(132, 135, 135);
+$background-color: #f5f5f5;
+
