--- a/client/src/Page/Auth/Login.scss
+++ b/client/src/Page/Auth/Login.scss
@@ -1,4 +1,5 @@
 @use "../../colors";
+
 .login {
     width: 400px;
     height: 450px;
@@ -76,6 +77,12 @@
                 left: 50%;
                 transform: translate(-50%);
                 cursor: pointer;
+
+                &.loading {
+                    opacity: 0.75;
+                    cursor: default;
+                    pointer-events: none;
+                }
 
                 &:hover {
                     box-shadow: 0px 0px 3px colors.$coler-btn;
