--- a/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
@@ -1,51 +1,142 @@
-.wrapcontendetailsuser {
-    width: 1257px;
+@use "../../../colors";
 
-    .sibar-detail-user {
-        width: 247px;
-        height: 500px;
-        background-color: aqua;
 
-        .sibar-detail-user_item {
-            display: flex;
-            padding: 17px 10px 10px 10px;
+.detailuser-profile {
 
-            .avata-detail-user {
-                width: 50px;
-                height: 50px;
-                background-color: aliceblue;
-                border-radius: 50%;
-                overflow: hidden;
-                margin-right: 10px;
-                color: #bcbcbc;
+    .detailuser-profile-title {
+        border-bottom: 1px solid #e8e8e8;
+        padding-bottom: 16px;
 
-                svg {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
+        h1 {
+            font-size: 22px;
+            font-weight: 400;
+        }
 
-            .conten-avata-detailuser {
-                flex: 1 1;
-                overflow: hidden;
-                .name {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                    font-weight: 600;
-                    color: #333;
+        span {
+            color: #333;
+        }
+    }
+
+    .detailuser-profile-infor {
+        display: flex;
+
+        .infor-user {
+            width: 70%;
+            padding-right: 20px;
+            .infor-user-item {
+                display: flex;
+                padding: 15px 0;
+
+                .infor-user-item1 {
+                    margin-right: 10px;
+                    width: 20%;
+                    display: flex;
+                    align-items: center;
                 }
 
-                .edit-profile {
+                .infor-user-item2 {
+                    flex: 1;
                     display: flex;
                     align-items: center;
 
-                    svg {
-                        margin-right: 5px;
+                    input {
+                        padding: 8px;
+                        width: 100%;
+                        border-radius: 2px;
+                        border: none;
+                        box-shadow: 0 0 0 1px #dbdbdb;
+                    }
+
+                    .addemail {
+                        &:hover {
+                            color: colors.$coler-btn;
+                            text-decoration: underline;
+                            cursor: pointer;
+                        }
+                    }
+
+                    .wrapcheckbox {
+                        margin-right: 10px;
+
+                        .checkbox {
+                            width: max-content;
+                            box-shadow: none;
+                            margin-right: 5px;
+                        }
+                    }
+
+                    .wrap-infor-user-item2 {
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        .birthitem {
+                            width: 32%;
+                            height: 30px;
+                            border: 1px solid colors.$coler-btn;
+
+                            .dayofbirth-item {
+                                width: 100%;
+                                height: 100%;
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-between;
+                                padding: 0 12px;
+                            }
+                        }
                     }
                 }
             }
 
+            button {
+                height: 40px;
+                width: 60px;
+                background-color: colors.$coler-btn;
+                color: colors.$text-color;
+                border: none;
+                border-radius: 3px;
+                font-size: 18px;
+                margin-top: 15px;
+            }
+        }
+
+        .avata-user {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+            .wrapavatauser {
+                text-align: center;
+                .avata {
+                    height: 100px;
+                    width: 100px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                    margin-bottom: 15px;
+                }
+
+                .setavata {
+                    .inputfile {
+                        display: none;
+                    }
+
+                    label {
+                        font-size: 17px;
+                        color: black;
+                        display: inline-block;
+                        cursor: pointer;
+                        border: 1px solid #ddd;
+                        padding: 7px 13px;
+                        border-radius: 3px;
+                    }
+
+                    // .inputfile:focus + label,
+                    // .inputfile + label:hover {
+                    //     background-color: red;
+                    // }
+                }
+            }
         }
     }
 }
