--- a/client/src/Page/Auth/DetailsUser/detailsuser.scss
+++ b/client/src/Page/Auth/DetailsUser/detailsuser.scss
@@ -16,7 +16,7 @@
             align-items: center;
             padding: 10px;
 
-            .avata-detail-user {
+            .avatar-detail-user {
                 width: 50px;
                 height: 50px;
                 background-color: #efefef;
@@ -25,13 +25,13 @@
                 margin-right: 10px;
                 color: #bcbcbc;
 
-                svg {
+                #avatar {
                     width: 100%;
                     height: 100%;
                     color: #c6c8ca;
                 }
             }
-            .conten-avata-detailuser {
+            .conten-avatar-detailuser {
                 flex: 1 1;
                 overflow: hidden;
                 .name {
