--- a/client/src/Page/Auth/DetailsUser/DetailsUser.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUser.scss
@@ -4,7 +4,9 @@
     display: flex;
     justify-content: center;
 }
-
+.content-popup-update{
+    margin-top: 15px;
+}
 
 .wrapcontendetailsuser {
     width: 1257px;
@@ -49,16 +51,18 @@
                 .edit-profile {
                     display: flex;
                     align-items: center;
+                    width: max-content;
+                    color: #797979;
+
+                    &:hover {
+                        text-decoration: underline;
+                        color: colors.$coler-btn;
+                        cursor: pointer;
+                    }
 
                     svg {
                         margin-right: 5px;
                     }
-                }
-            }
-
-            &:nth-child(1) {
-                svg {
-                    color: #c6c8ca;
                 }
             }
 
@@ -129,5 +133,153 @@
         flex: 1;
         padding: 10px 30px;
         background-color: #fff;
+    }
+}
+
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    .shadow {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+
+        .contentpopup {
+            width: 500px;
+            background-color: #fff;
+            position: relative;
+            padding: 10px 20px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            .titlepopupupdateuser {
+                font-size: 22px;
+                padding: 8px 0;
+                border-bottom: 1px solid;
+            }
+
+            .content-popup-update {
+                .updateuser {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    padding: 10px 0;
+
+                    span {
+                        width: 130px;
+                    }
+
+                    .wrapinput-pudate {
+                        flex: 1 1;
+                        padding-left: 10px;
+                        display: flex;
+                        height: 30px;
+                        align-items: center;
+                        justify-content: center;
+                        border: 1px solid;
+
+                        input {
+                            width: 100%;
+                            outline: none;
+                            border: none;
+                            flex: 1;
+                            height: 100%;
+                        }
+                    }
+
+                    .wrapupdatebirth {
+                        display: flex;
+                        justify-content: space-between;
+                        flex: 1;
+
+                        .birth {
+                            width: 31%;
+                            position: relative;
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+                            padding: 8px;
+                            border: 1px solid;
+                        }
+                    }
+
+                    .option {
+                        display: flex;
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            .btnsave {
+                height: 50px;
+                width: 100%;
+                margin-top: 20px;
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .titlebtnsave {
+                    width: 80%;
+                    background: #f72034;
+                    padding: 5px 20px;
+                    text-align: center;
+                    color: aliceblue;
+                    border-radius: 5px;
+                    font-size: 21px;
+                    &:hover{
+                        text-decoration: underline;
+                        cursor: pointer;
+                    }
+                }
+                .errormessage{
+                    position: absolute;
+                    bottom: 100%;
+                    color: colors.$coler-btn;
+                }
+            }
+        }
+    }
+}
+
+.birth {
+
+    .listmonth,
+    .listday,
+    .listyear {
+        position: absolute;
+        width: 100%;
+        max-height: 200px;
+        top: 108%;
+        z-index: 2;
+        left: 0;
+        overflow-y: scroll;
+        background-color: #fff;
+        border: 1px solid;
+        list-style: none;
+
+        li {
+            padding: 5px;
+
+            &:hover {
+                cursor: pointer;
+                color: colors.$coler-btn;
+            }
+        }
+    }
+
+    .wrapdayofbirth,
+    .wrapmonthofbirth,
+    .wrapyearofbirth {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        z-index: 1;
+        top: 0;
     }
 }
