--- a/client/src/Page/Auth/ChangePassword.scss
+++ b/client/src/Page/Auth/ChangePassword.scss
@@ -72,8 +72,8 @@
                 outline: none;
                 border: none;
                 color: white;
-                // background-color: $coler-btn);
-                background-color: colors.$coler-btn;
+                // background-color: $color-btn);
+                background-color: colors.$color-btn;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
@@ -81,7 +81,7 @@
                 cursor: pointer;
 
                 &:hover {
-                    box-shadow: 0px 0px 3px colors.$coler-btn;
+                    box-shadow: 0px 0px 3px colors.$color-btn;
                 }
             }
         }
