--- a/client/src/Page/Auth/DetailsUser/DetailsUser.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUser.scss
@@ -57,7 +57,7 @@
 
                     &:hover {
                         text-decoration: underline;
-                        color: colors.$coler-btn;
+                        color: colors.$color-btn;
                         cursor: pointer;
                     }
 
@@ -84,14 +84,14 @@
             &:nth-child(5) {
                 svg {
                     margin-right: 5px;
-                    color: colors.$coler-btn;
+                    color: colors.$color-btn;
                 }
             }
 
             &:nth-child(6) {
                 svg {
                     margin-right: 5px;
-                    color: colors.$coler-btn;
+                    color: colors.$color-btn;
                 }
             }
 
@@ -105,7 +105,7 @@
             &:nth-child(n+3) {
                 a {
                     &:hover {
-                        color: colors.$coler-btn;
+                        color: colors.$color-btn;
                         cursor: pointer;
                     }
                 }
@@ -125,7 +125,7 @@
 
         .active {
             a {
-                color: colors.$coler-btn;
+                color: colors.$color-btn;
             }
         }
     }
@@ -134,160 +134,5 @@
         flex: 1;
         padding: 10px 30px;
         background-color: #fff;
-    }
-}
-
-.popup {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-
-    &.hide {
-        display: none;
-    }
-
-    .shadow {
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-
-        .contentpopup {
-            width: 500px;
-            background-color: #fff;
-            position: relative;
-            padding: 10px 20px;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-            .titlepopupupdateuser {
-                font-size: 22px;
-                padding: 8px 0;
-                border-bottom: 1px solid;
-            }
-
-            .content-popup-update {
-                .updateuser {
-                    width: 100%;
-                    display: flex;
-                    align-items: center;
-                    padding: 10px 0;
-
-                    span {
-                        width: 130px;
-                    }
-
-                    .wrapinput-pudate {
-                        flex: 1 1;
-                        padding-left: 10px;
-                        display: flex;
-                        height: 30px;
-                        align-items: center;
-                        justify-content: center;
-                        border: 1px solid;
-
-                        input {
-                            width: 100%;
-                            outline: none;
-                            border: none;
-                            flex: 1;
-                            height: 100%;
-                        }
-                    }
-
-                    .wrapupdatebirth {
-                        display: flex;
-                        justify-content: space-between;
-                        flex: 1;
-
-                        .birth {
-                            width: 31%;
-                            position: relative;
-                            display: flex;
-                            align-items: center;
-                            justify-content: space-between;
-                            padding: 8px;
-                            border: 1px solid;
-                        }
-                    }
-
-                    .option {
-                        display: flex;
-                        margin-right: 10px;
-                    }
-                }
-            }
-
-            .btnsave {
-                height: 50px;
-                width: 100%;
-                margin-top: 20px;
-                position: relative;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                .titlebtnsave {
-                    width: 80%;
-                    background: #f72034;
-                    padding: 5px 20px;
-                    text-align: center;
-                    color: aliceblue;
-                    border-radius: 5px;
-                    font-size: 21px;
-
-                    &:hover {
-                        text-decoration: underline;
-                        cursor: pointer;
-                    }
-                }
-
-                .errormessage {
-                    position: absolute;
-                    bottom: 100%;
-                    color: colors.$coler-btn;
-                }
-            }
-        }
-    }
-}
-
-.birth {
-
-    .listmonth,
-    .listday,
-    .listyear {
-        position: absolute;
-        width: 100%;
-        max-height: 200px;
-        top: 108%;
-        z-index: 2;
-        left: 0;
-        overflow-y: scroll;
-        background-color: #fff;
-        border: 1px solid;
-        list-style: none;
-
-        li {
-            padding: 5px;
-
-            &:hover {
-                cursor: pointer;
-                color: colors.$coler-btn;
-            }
-        }
-    }
-
-    .wrapdayofbirth,
-    .wrapmonthofbirth,
-    .wrapyearofbirth {
-        position: fixed;
-        height: 100%;
-        width: 100%;
-        left: 0;
-        z-index: 1;
-        top: 0;
     }
 }
