--- a/client/src/_colors.scss
+++ b/client/src/_colors.scss
@@ -1,8 +1,8 @@
 $text-color: #ebe9e6;
 $black-color: #1c1c1c;
 $color-fullLayout: #dddddd;
-$coler-btn: #d41138;
-$coler-hover: rgb(193, 193, 193);
+$color-btn: #d41138;
+$color-hover: rgb(193, 193, 193);
 $shadow: rgb(132, 135, 135);
 $background-color: #f5f5f5;
 
