--- a/client/src/components/Account/Account.scss
+++ b/client/src/components/Account/Account.scss
@@ -15,7 +15,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 5px;
-        background-color: colors.$coler-btn;
+        background-color: colors.$color-btn;
         margin-right: 10px;
 
         span {
@@ -34,7 +34,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: colors.$coler-btn;
+            background-color: colors.$color-btn;
             border-radius: 5px;
             color: #fff;
 
