add search product

--- a/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
@@ -123,7 +123,7 @@
                     border-radius: 50%;
                     overflow: hidden;
                     margin: auto;
-
+                    margin-bottom: 15px;
                     #avatar {
                         height: 100px;
                         width: 100px;
