--- a/client/src/Page/Auth/ChangePassword.scss
+++ b/client/src/Page/Auth/ChangePassword.scss
@@ -28,7 +28,7 @@
     & form {
         height: 250px;
 
-        & div.error-login {
+        & div.error-change-password {
             position: relative;
             width: 100%;
             height: 45px;
@@ -55,12 +55,12 @@
                 position: relative;
                 left: 50%;
                 transform: translate(-50%);
+                transition: 0.2s;
 
                 &:hover,
-                :focus,
-                :active {
+                &:focus,
+                &:active {
                     box-shadow: 0px 0px 3px colors.$shadow;
-
                 }
             }
 
@@ -72,13 +72,13 @@
                 outline: none;
                 border: none;
                 color: white;
-                // background-color: $color-btn);
                 background-color: colors.$color-btn;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
                 transform: translate(-50%);
                 cursor: pointer;
+                transition: 0.2s;
 
                 &:hover {
                     box-shadow: 0px 0px 3px colors.$color-btn;
@@ -87,17 +87,4 @@
         }
 
     }
-
-    // & div {
-    //     width: 100%;
-    //     height: 40px;
-    //     position: relative;
-
-    //     & span {
-    //         position: absolute;
-    //         top: 50%;
-    //         left: 50%;
-    //         transform: translate(-50%, -50%);
-    //     }
-    // }
 }
