--- a/client/src/Page/Auth/Login.scss
+++ b/client/src/Page/Auth/Login.scss
@@ -53,12 +53,12 @@
                 position: relative;
                 left: 50%;
                 transform: translate(-50%);
+                transition: 0.2s;
 
                 &:hover,
-                :focus,
-                :active {
+                &:focus,
+                &:active {
                     box-shadow: 0px 0px 3px colors.$shadow;
-
                 }
             }
 
@@ -70,13 +70,13 @@
                 outline: none;
                 border: none;
                 color: white;
-                // background-color: $color-btn);
                 background-color: colors.$color-btn;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
                 transform: translate(-50%);
                 cursor: pointer;
+                transition: 0.2s;
 
                 &.loading {
                     opacity: 0.75;
