--- a/client/src/Page/Auth/Register.scss
+++ b/client/src/Page/Auth/Register.scss
@@ -65,12 +65,12 @@
                     outline: none;
                     border: 1px solid colors.$shadow;
                     border-radius: 5px;
+                    transition: 0.2s;
 
                     &:hover,
-                    :focus,
-                    :active {
+                    &:focus,
+                    &:active {
                         box-shadow: 0px 0px 3px colors.$shadow;
-
                     }
                 }
             }
@@ -83,13 +83,13 @@
                 outline: none;
                 border: none;
                 color: white;
-                // background-color: $color-btn);
                 background-color: colors.$color-btn;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
                 transform: translate(-50%);
                 cursor: pointer;
+                transition: 0.2s;
 
                 &.loading {
                     opacity: 0.75;
@@ -104,17 +104,4 @@
         }
 
     }
-
-    // & div {
-    //     width: 100%;
-    //     height: 40px;
-    //     position: relative;
-
-    //     & span {
-    //         position: absolute;
-    //         top: 50%;
-    //         left: 50%;
-    //         transform: translate(-50%, -50%);
-    //     }
-    // }
 }
