--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -188,6 +188,7 @@
                     height: 100%;
                     width: 88%;
                     padding: 10px;
+                    position: relative;
 
                     .search_input {
                         width: 100%;
@@ -198,6 +199,34 @@
                         background: transparent;
                         outline: none;
                         caret-color: colors.$color-btn;
+                    }
+
+                    .list-search {
+                        position: absolute;
+                        width: 100%;
+                        top: 108%;
+                        left: 0;
+                        background-color: #fff;
+
+                        .search-item{
+                            display: flex;
+                            padding: 10px;
+                            .image-product-search {
+                                width: 40px;
+                                height: 40px;
+                                border-radius: 50%;
+    
+                            }
+                            .description{
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                                font-weight: 400;
+                                margin-left: 10px;
+                                font-size: 14px;
+                                color: #333;
+                            }
+                        }
                     }
                 }
 
