--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -217,15 +217,22 @@
                                 border-radius: 50%;
     
                             }
-                            .description{
+                            .detail-search-product{
+                                padding-left: 10px;
                                 overflow: hidden;
-                                text-overflow: ellipsis;
-                                white-space: nowrap;
-                                font-weight: 400;
-                                margin-left: 10px;
-                                font-size: 14px;
-                                color: #333;
+                                .description{
+                                    overflow: hidden;
+                                    text-overflow: ellipsis;
+                                    font-weight: 500;
+                                    white-space: nowrap;
+                                    font-size: 14px;
+                                    color: #333;
+                                }
+                                .price-search{
+                                    color: colors.$color-btn;
+                                }
                             }
+
                         }
                     }
                 }
