Increase username length

--- a/client/src/Page/Auth/DetailsUser/DetailsUser.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUser.scss
@@ -56,7 +56,7 @@
                     color: #797979;
 
                     &:hover {
-                        text-decoration: underline;
+                        // text-decoration: underline;
                         color: colors.$color-btn;
                         cursor: pointer;
                     }
