Remove edit username feature

--- a/client/src/Page/Auth/DetailsUser/DetailsUser.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUser.scss
@@ -31,7 +31,7 @@
                 margin-right: 10px;
                 color: #bcbcbc;
 
-                #avatar {
+                & img {
                     width: 100%;
                     color: #c6c8ca;
                 }
