--- a/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
@@ -39,54 +39,6 @@
                     flex: 1;
                     display: flex;
                     align-items: center;
-
-                    input {
-                        padding: 8px;
-                        width: 100%;
-                        border-radius: 2px;
-                        border: none;
-                        box-shadow: 0 0 0 1px #dbdbdb;
-                    }
-
-                    .addemail {
-                        &:hover {
-                            color: colors.$color-btn;
-                            text-decoration: underline;
-                            cursor: pointer;
-                        }
-                    }
-
-                    .wrapcheckbox {
-                        margin-right: 10px;
-
-                        .checkbox {
-                            width: max-content;
-                            box-shadow: none;
-                            margin-right: 5px;
-                        }
-                    }
-
-                    .wrap-infor-user-item2 {
-                        width: 100%;
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-
-                        .birthitem {
-                            width: 32%;
-                            height: 30px;
-                            border: 1px solid colors.$color-btn;
-
-                            .dayofbirth-item {
-                                width: 100%;
-                                height: 100%;
-                                display: flex;
-                                align-items: center;
-                                justify-content: space-between;
-                                padding: 0 12px;
-                            }
-                        }
-                    }
                 }
             }
 
@@ -125,7 +77,7 @@
                     overflow: hidden;
                     margin: auto;
 
-                    #avatar {
+                    & img {
                         height: 100px;
                         width: 100px;
                         object-fit: cover;
@@ -144,6 +96,10 @@
                         display: none;
                     }
 
+                    & .error-file {
+                        color: red;
+                    }
+
                     button {
                         margin-top: 5px;
                         background-color: colors.$color-btn;
@@ -155,11 +111,6 @@
                         padding: 7px 13px;
                         border-radius: 3px;
                     }
-
-                    // .inputfile:focus + label,
-                    // .inputfile + label:hover {
-                    //     background-color: red;
-                    // }
                 }
             }
         }
