--- a/client/src/components/render_item/SearchListPopup.scss
+++ b/client/src/components/render_item/SearchListPopup.scss
@@ -2,28 +2,44 @@
 
 .search-container {
     position: absolute;
-    top: 100px;
-    left: 25%;
-    width: 750px;
+    top: 80px;
+    width: 51%;
+    border-radius: 5px;
     background-color: white;
 
     & .product-item {
         height: 75px;
         display: flex;
         padding: 5px;
+        border-radius: 5px;
+        transition: 0.2s;
+
+        &:hover {
+            background-color: colors.$background-color;
+        }
 
         & img {
             height: 100%;
-            border: 1px solid red;
         }
 
         & .item-content {
             height: 100%;
-            border: 1px solid red;
+            margin-left: 5px;
+
+            & .product-name {
+                color: black;
+                display: -webkit-box;
+                word-break: break-all;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
 
             & .product-price {
                 color: colors.$color-btn;
                 font-weight: bold;
+                // margin-left: 5px;
             }
         }
     }
