--- a/client/src/components/render_item/SearchListPopup.scss
+++ b/client/src/components/render_item/SearchListPopup.scss
@@ -27,6 +27,7 @@
             margin-left: 5px;
 
             & .product-name {
+                width: 98%;
                 color: black;
                 display: -webkit-box;
                 word-break: break-all;
