--- a/client/src/components/render_item/HotItem.scss
+++ b/client/src/components/render_item/HotItem.scss
@@ -1,16 +1,62 @@
 .hot-item {
-    // width: 33.333%;
-    padding: 3px 23px;
-    height: 100%;
+    width: 33.333%;
+    display: flex;
+    justify-content: center;
+    left: 100%;
     flex-shrink: 0;
+    height: 100%;
     position: absolute;
-    transition: all ease 0.75s;
+    // transition: all ease 0.75s;
 
-    .hot-item-content {
-        height: 100%;
-        position: relative;
-        overflow: hidden;
-        border-radius: 5px;
+    // .hot-item-content {
+    //     height: 100%;
+    //     position: relative;
+    //     overflow: hidden;
+    //     border-radius: 5px;
+
+    //     img {
+    //         width: 100%;
+    //         height: 100%;
+    //         object-fit: cover;
+    //     }
+
+    //     .detail {
+    //         position: absolute;
+    //         width: 100%;
+    //         height: 38%;
+    //         left: 0;
+    //         bottom: 0;
+    //         background: rgba(0, 0, 0, 0.8);
+    //         color: #fff;
+    //         text-align: center;
+
+    //         .price {
+    //             padding: 4px 0;
+    //             width: max-content;
+    //             margin: auto;
+    //             font-size: 18px;
+    //             border-bottom: 1px solid;
+    //             border-top: 1px solid;
+    //             color: #ffffff;
+    //             margin-top: 8px;
+    //             margin-bottom: 8px;
+    //         }
+
+    //         .btn {
+    //             color: white;
+    //             width: max-content;
+    //             margin: auto;
+    //             padding: 7px 9px;
+    //             border-radius: 3px;
+    //             background-color: red;
+    //         }
+    //     }
+    // }
+    .wrap-hot-item {
+        position: absolute;
+        width: 90%;
+        top: 0;
+        bottom: 0;
 
         img {
             width: 100%;
@@ -20,34 +66,34 @@
 
         .detail {
             position: absolute;
-            width: 100%;
-            height: 38%;
-            left: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.8);
+            left: 0;
+            height: 40%;
             color: #fff;
-            text-align: center;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.7);
 
             .price {
-                padding: 4px 0;
-                width: max-content;
-                margin: auto;
-                font-size: 18px;
-                border-bottom: 1px solid;
+                font-size: 22px;
+                padding: 4px;
                 border-top: 1px solid;
-                color: #ffffff;
-                margin-top: 8px;
-                margin-bottom: 8px;
+                border-bottom: 1px solid;
+                margin: auto;
+                margin-top: 10px;
+                width: max-content;
             }
 
-            .btn {
-                color: white;
-                width: max-content;
-                margin: auto;
-                padding: 7px 9px;
-                border-radius: 3px;
+            a {
+                position: absolute;
+                left: 50%;
+                bottom: 9%;
+                transform: translateX(-50%);
+                padding: 10px 20px;
                 background-color: red;
+                color: #fff;
+                border-radius: 5px;
             }
         }
     }
+
 }
